# Projet2

./: 01-read.ipynb  README.md  pyproject.toml
